test/compile_errors/stage1/obj/cannot_continue_out_of_defer_expression.zig
export fn foo() void {
    while (true) {
        defer {
            continue;
        }
    }
}

// cannot continue out of defer expression
//
// tmp.zig:4:13: error: cannot continue out of defer expression
